NMT is not enabled if NMT option is specified after class path specifiers

XMLWordPrintable

    • b55
    • Verified

        Reproduces with:

        java -cp . -XX:NativeMemoryTracking=detail -version

        which with the change for JDK-8066185 results in:

        Java HotSpot(TM) 64-Bit Server VM warning: Native Memory Tracking did not setup properly, using wrong launcher?

              Assignee:
              Kumar Srinivasan
              Reporter:
              Christian Tornqvist
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: