8074373: NMT is not enabled if NMT option is specified after class path specifiers Reviewed-by: dholmes